--- a/html/lecturas2.html
+++ b/html/lecturas2.html
@@ -55,6 +55,7 @@
     <div class="contenido">
         <h2>📖 Fundamentos y principios clave de la Ingeniería de Sistemas</h2>
         <p>La Ingeniería de Sistemas es una disciplina que busca diseñar y optimizar sistemas complejos mediante un enfoque estructurado y metodológico. Su aplicación va más allá del desarrollo de software y abarca diversas industrias, desde la manufactura hasta la gestión empresarial.</p>
+        <p>Una de las principales diferencias de la ingeniería de sistemas respecto a otras disciplinas de ingeniería tradicionales, consiste en que la ingeniería de sistemas no construye productos tangibles. Mientras que los ingenieros civiles podrían diseñar edificios o puentes, los ingenieros electrónicos podrían diseñar circuitos, los ingenieros de sistemas tratan con sistemas abstractos con ayuda de las metodologías de la ciencia de sistemas, y confían además en otras disciplinas para diseñar y entregar los productos tangibles que son la realización de esos sistemas. </p>
     <hr>
         <h3>🔹 Principios esenciales de la Ingeniería de Sistemas</h3>
         <ul>
@@ -125,13 +126,15 @@
             <li>📢 <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.javerianacali.edu.co/noticias/ingenieria-de-sistemas-y-computacion-una-apuesta-innovadora-por-la-formacion-integral-y-el" target="_blank">Nuevas Noticias</a></li>
         </ul>
     </div>
-
+    <a href="#" class="btn-arriba">⬆</a>
     <div class="Footer">
-
         <p>&copy; 2025 - OVI de Ingeniería de Sistemas</p>
-
+        <p>Universidad de Córdoba - Sede Sahagún</p>
+        <P><strong>Autor: </strong>Juan Sebastián Montes</P>
         <p>Contacto: <a href="mailto:jmontesperez15@correo.unicordoba.edu.co" target="_blank">jmontesperez15@correo.unicordoba.edu.co</a></p>
+        <p>No. de Visitas: <span id="contadorVisitas">0</span></p>
     </div>
+    <script src="../JS/botones.js"></script>
 
 </div>
 </body>
