--- a/index.html
+++ b/index.html
@@ -57,23 +57,30 @@
         <div class="imagen">
             <img src="../media/imgcontenido.jpg" alt="Imagen sobre Ingeniería de Sistemas">
         </div>
-        <p>Este Objeto Virtual de Información está diseñado para ofrecer una introducción a la Ingeniería de Sistemas y ser facil de entender.</p>
+        <h2>Objetivos</h2>
+        <p>Este Objeto Virtual de Información está diseñado para ofrecer una introducción a la Ingeniería de Sistemas y ser facil de entender. </p>
         <p>Aquí encontrarás lecturas, videos, actividades y más recursos educativos con los que esperamos que puedas aprender mucho y te diviertas.</p>
+        <P>Nuestro principal objetivo es que aprendas de manera didactica y que ademas tengas:</P>
+<ul class="lista-estilizada">
+    <li>Una comprensión sólida de la Ingeniería de Sistemas.</li>
+    <li>Motivación para seguir explorando este apasionante campo.</li>
+    <li>Herramientas básicas para aplicar lo aprendido.</li>
+</ul>
         <h3>Introducción a la Ingeniería de Sistemas</h3>
-        <p> La Ingeniería de Sistemas es un campo de la Ingeniería que se enfoca en el diseño, desarrollo, implementación y gestión de sistemas de información complejos. Lo que hace un ingeniero de sistemas es abarcar una variedad de aplicaciones, desde software y hardware hasta sistemas de información en organizaciones, con el objetivo de resolver sus problemas. </p>
+        <p> La Ingeniería de Sistemas es un campo de la Ingeniería que se enfoca en el diseño, desarrollo, implementación y gestión de sistemas de información complejos. Algo importante es no confundir esta ingenieria con otra la ingenieriade sistemas de información. Lo que hace un ingeniero de sistemas es abarcar una variedad de aplicaciones, desde software y hardware hasta sistemas de información en organizaciones, con el objetivo de resolver sus problemas. </p>
 
         <p>Los proyectos en ingeniería de sistemas involucran la integración de tecnología, procesos y personas. Esto incluye la identificación de requisitos, la planificación del proyecto, el diseño, la implementación, el mantenimiento y la mejora continua de sistemas. </p>
         <h3>🔎 ¿Qué encontrarás aquí?</h3>
 <p>Este OVI está dividido en varias secciones:</p>
 
 <ul>
-    <li><strong>📖 Lecturas:</strong> Artículos sobre la historia, fundamentos y aplicaciones.</li>
-    <li><strong>🎥 Multimedia:</strong> Videos y podcasts sobre el tema.</li>
+    <li><strong>📖 Lecturas:</strong> Artículos sobre la historia, fundamentos, aplicaciones y demás.</li>
+    <li><strong>🎥 Multimedia:</strong> Videos entretenidos sobre el tema.</li>
     <li><strong>📝 Actividades:</strong> Ejercicios interactivos para reforzar el aprendizaje.</li>
 </ul>
 
 <blockquote>
-    <p><em>“La ingeniería de sistemas no solo trata de computadoras, sino de diseñar soluciones eficientes para cualquier problema.”</em> – Autor desconocido</p>
+    <p><em>“La ingeniería de sistemas no solo trata de computadoras, sino de diseñar soluciones eficientes para cualquier problema.”</em></p>
 </blockquote>
 
     </div>
@@ -98,14 +105,15 @@
             <li>📢 <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.javerianacali.edu.co/noticias/ingenieria-de-sistemas-y-computacion-una-apuesta-innovadora-por-la-formacion-integral-y-el" target="_blank">Nuevas Noticias</a></li>
         </ul>
     </div>
-
+    <a href="#" class="btn-arriba">⬆</a>
     <div class="Footer">
-
         <p>&copy; 2025 - OVI de Ingeniería de Sistemas</p>
-
+        <p>Universidad de Córdoba - Sede Sahagún</p>
+        <P><strong>Autor: </strong>Juan Sebastián Montes</P>
         <p>Contacto: <a href="mailto:jmontesperez15@correo.unicordoba.edu.co" target="_blank">jmontesperez15@correo.unicordoba.edu.co</a></p>
+        <p>No. de Visitas: <span id="contadorVisitas">0</span></p>
     </div>
-
+    <script src="../JS/botones.js"></script>
 </div>
 </body>
 </html>
