--- a/html/actividad1.html
+++ b/html/actividad1.html
@@ -137,13 +137,15 @@
             <li>📢 <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.javerianacali.edu.co/noticias/ingenieria-de-sistemas-y-computacion-una-apuesta-innovadora-por-la-formacion-integral-y-el" target="_blank">Nuevas Noticias</a></li>
         </ul>
     </div>
-
+    <a href="#" class="btn-arriba">⬆</a>
     <div class="Footer">
-
         <p>&copy; 2025 - OVI de Ingeniería de Sistemas</p>
-
+        <p>Universidad de Córdoba - Sede Sahagún</p>
+        <P><strong>Autor: </strong>Juan Sebastián Montes</P>
         <p>Contacto: <a href="mailto:jmontesperez15@correo.unicordoba.edu.co" target="_blank">jmontesperez15@correo.unicordoba.edu.co</a></p>
+        <p>No. de Visitas: <span id="contadorVisitas">0</span></p>
     </div>
+    <script src="../JS/botones.js"></script>
 
 </div>
 </body>
