--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OVI - Introducción a la Ing. Sistemas</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
     <div class="container">
@@ -19,35 +19,35 @@
     <div class="Menu">
         <nav>
             <ul>
-                <li><a href="../html/index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li class="submenu">
                     <a href="../html/lecturas.html">Lecturas ▾</a>
                     <ul class="dropdown">
-                        <li><a href="../html/lecturas1.html">Historia</a></li>
-                        <li><a href="../html/lecturas2.html">Principios básicos</a></li>
-                        <li><a href="../html/lecturas3.html">Áreas de aplicación</a></li>
-                        <li><a href="../html/lecturas4.html">Extras 1</a></li>
-                        <li><a href="../html/lecturas5.html">Extras 2</a></li>
+                        <li><a href="/html/lecturas.html">Historia</a></li>
+                        <li><a href="/html/lecturas2.html">Principios básicos</a></li>
+                        <li><a href="/html/lecturas3.html">Áreas de aplicación</a></li>
+                        <li><a href="/html/lecturas4.html">Extras 1</a></li>
+                        <li><a href="/html/lecturas5.html">Extras 2</a></li>
                     </ul>
                 </li>
                 <li class="submenu">
-                    <a href="../html/multimedia.html">Multimedia ▾</a>
+                    <a href="/html/multimedia.html">Multimedia ▾</a>
                     <ul class="dropdown">
-                        <li><a href="../html/multimedia.html#Video 1">Video 1</a></li>
-                        <li><a href="../html/multimedia.html#Video 2">Video 2</a></li>
-                        <li><a href="../html/multimedia.html#Video 3">Video 3</a></li>
-                        <li><a href="../html/multimedia.html#Video 4">Video 4</a></li>
+                        <li><a href="/html/multimedia.html#Video 1">Video 1</a></li>
+                        <li><a href="/html/multimedia.html#Video 2">Video 2</a></li>
+                        <li><a href="/html/multimedia.html#Video 3">Video 3</a></li>
+                        <li><a href="/html/multimedia.html#Video 4">Video 4</a></li>
                     </ul>
                 </li>
                 <li class="submenu">
-                    <a href="../html/actvidades.html">Actividades ▾</a>
+                    <a href="/html/actvidades.html">Actividades ▾</a>
                     <ul class="dropdown">
-                        <li><a href="../html/actividad1.html">Actividad 1</a></li>
-                        <li><a href="../html/actividad2.html">Actividad 2</a></li>
-                        <li><a href="../html/actividad3.html">Actividad 3</a></li>
+                        <li><a href="/html/actividad1.html">Actividad 1</a></li>
+                        <li><a href="/html/actividad2.html">Actividad 2</a></li>
+                        <li><a href="/html/actividad3.html">Actividad 3</a></li>
                     </ul>
                 </li>
-                <li><a href="../html/autores.html">Autores</a></li>
+                <li><a href="/html/autores.html">Autores</a></li>
             </ul>
         </nav>
     </div>
@@ -55,7 +55,7 @@
     <div class="Contenido">
         <h2>¡Bienvenido a nuestro OVI sobre la Intro. Ing. Sistemas!</h2>
         <div class="imagen">
-            <img src="../media/imgcontenido.jpg" alt="Imagen sobre Ingeniería de Sistemas">
+            <img src="/media/imgcontenido.jpg" alt="Imagen sobre Ingeniería de Sistemas">
         </div>
         <h2>Objetivos</h2>
         <p>Este Objeto Virtual de Información está diseñado para ofrecer una introducción a la Ingeniería de Sistemas y ser facil de entender. </p>
@@ -113,7 +113,7 @@
         <p>Contacto: <a href="mailto:jmontesperez15@correo.unicordoba.edu.co" target="_blank">jmontesperez15@correo.unicordoba.edu.co</a></p>
         <p>No. de Visitas: <span id="contadorVisitas">0</span></p>
     </div>
-    <script src="../JS/botones.js"></script>
+    <script src="/JS/botones.js"></script>
 </div>
 </body>
 </html>
