--- a/html/lecturas1.html
+++ b/html/lecturas1.html
@@ -91,8 +91,8 @@
 <hr>
     <h4>Conclusión</h4>
 <p>La Ingeniería de Sistemas ha evolucionado a lo largo del tiempo, pasando de ser una disciplina enfocada en la optimización de procesos industriales a convertirse en un pilar fundamental para el desarrollo de tecnologías informáticas y digitales. Desde sus orígenes en la Teoría General de Sistemas hasta la era de la computación y la inteligencia artificial, este campo ha demostrado su importancia en la solución de problemas complejos en diversas áreas del conocimiento.</p>
-<p>Hoy en día, la Ingeniería de Sistemas no solo se limita al desarrollo de software y hardware, sino que abarca la integración de tecnologías emergentes como la automatización, el análisis de datos y la ciberseguridad. Su enfoque interdisciplinario permite diseñar soluciones eficientes y adaptables a los constantes cambios del mundo moderno.</p>
-<p>En este OVI, exploraremos más a fondo los conceptos clave, herramientas y aplicaciones de la Ingeniería de Sistemas, con el objetivo de brindar un conocimiento sólido sobre esta apasionante disciplina.</p>
+<p>Además, sabemos que hoy en día la Ingeniería de Sistemas no solo se limita al desarrollo de software y hardware, sino que abarca la integración de tecnologías emergentes como la automatización, el análisis de datos y la ciberseguridad. Su enfoque interdisciplinario permite diseñar soluciones eficientes y adaptables a los constantes cambios del mundo moderno.</p>
+<p>En este OVI, continuaremos exploraremos más a fondo los conceptos clave, herramientas y aplicaciones de la Ingeniería de Sistemas, con el objetivo de brindar un conocimiento sólido sobre esta apasionante disciplina.</p>
 </div>
 
     <div class="Barra">
